fpm-test/src/it/freax/fpm/test/main/PhpParser.java
// $ANTLR 3.4 Php.g 2012-05-06 22:24:42

package it.freax.fpm.test.main; 


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class PhpParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Abstract", "AccessModifier", "Ampersand", "And", "Apply", "Array", "ArrayAssign", "AsignmentOperator", "Asterisk", "Bang", "Block", "BodyString", "Boolean", "Break", "Case", "Cast", "Class", "ClassDefinition", "ClassMember", "Clone", "CloseBrace", "CloseCurlyBrace", "CloseSquareBrace", "Colon", "Comma", "ComparisionOperator", "Const", "Continue", "DNum", "Decimal", "Default", "Digits", "Do", "Dollar", "Dot", "DoubleQuotedString", "Echo", "Else", "ElseIf", "Empty", "Eol", "EqualityOperator", "Equals", "EscapeCharector", "Exponent_DNum", "Extends", "Field", "FirstBodyString", "For", "ForCondition", "ForInit", "ForUpdate", "Foreach", "Forwardslash", "Function", "Global", "HereDoc", "HereDocContents", "Hexadecimal", "If", "IfExpression", "Implements", "IncrementOperator", "InstanceMember", "Instanceof", "Integer", "Interface", "Label", "LogicalAnd", "LogicalOr", "Member", "Method", "Minus", "Modifiers", "MultilineComment", "New", "Octal", "OpenBrace", "OpenCurlyBrace", "OpenSquareBrace", "Or", "Params", "Percent", "Pipe", "Plus", "Postfix", "Prefix", "PrimitiveType", "QuestionMark", "Real", "Reference", "RequireOperator", "Return", "SemiColon", "ShiftOperator", "SingleQuotedString", "SinglelineComment", "Static", "SuppressWarnings", "Switch", "Tilde", "UnixComment", "UnquotedString", "Var", "While", "WhiteSpace", "Xor", "'as'"
    };

    public static final int EOF=-1;
    public static final int T__111=111;
    public static final int Abstract=4;
    public static final int AccessModifier=5;
    public static final int Ampersand=6;
    public static final int And=7;
    public static final int Apply=8;
    public static final int Array=9;
    public static final int ArrayAssign=10;
    public static final int AsignmentOperator=11;
    public static final int Asterisk=12;
    public static final int Bang=13;
    public static final int Block=14;
    public static final int BodyString=15;
    public static final int Boolean=16;
    public static final int Break=17;
    public static final int Case=18;
    public static final int Cast=19;
    public static final int Class=20;
    public static final int ClassDefinition=21;
    public static final int ClassMember=22;
    public static final int Clone=23;
    public static final int CloseBrace=24;
    public static final int CloseCurlyBrace=25;
    public static final int CloseSquareBrace=26;
    public static final int Colon=27;
    public static final int Comma=28;
    public static final int ComparisionOperator=29;
    public static final int Const=30;
    public static final int Continue=31;
    public static final int DNum=32;
    public static final int Decimal=33;
    public static final int Default=34;
    public static final int Digits=35;
    public static final int Do=36;
    public static final int Dollar=37;
    public static final int Dot=38;
    public static final int DoubleQuotedString=39;
    public static final int Echo=40;
    public static final int Else=41;
    public static final int ElseIf=42;
    public static final int Empty=43;
    public static final int Eol=44;
    public static final int EqualityOperator=45;
    public static final int Equals=46;
    public static final int EscapeCharector=47;
    public static final int Exponent_DNum=48;
    public static final int Extends=49;
    public static final int Field=50;
    public static final int FirstBodyString=51;
    public static final int For=52;
    public static final int ForCondition=53;
    public static final int ForInit=54;
    public static final int ForUpdate=55;
    public static final int Foreach=56;
    public static final int Forwardslash=57;
    public static final int Function=58;
    public static final int Global=59;
    public static final int HereDoc=60;
    public static final int HereDocContents=61;
    public static final int Hexadecimal=62;
    public static final int If=63;
    public static final int IfExpression=64;
    public static final int Implements=65;
    public static final int IncrementOperator=66;
    public static final int InstanceMember=67;
    public static final int Instanceof=68;
    public static final int Integer=69;
    public static final int Interface=70;
    public static final int Label=71;
    public static final int LogicalAnd=72;
    public static final int LogicalOr=73;
    public static final int Member=74;
    public static final int Method=75;
    public static final int Minus=76;
    public static final int Modifiers=77;
    public static final int MultilineComment=78;
    public static final int New=79;
    public static final int Octal=80;
    public static final int OpenBrace=81;
    public static final int OpenCurlyBrace=82;
    public static final int OpenSquareBrace=83;
    public static final int Or=84;
    public static final int Params=85;
    public static final int Percent=86;
    public static final int Pipe=87;
    public static final int Plus=88;
    public static final int Postfix=89;
    public static final int Prefix=90;
    public static final int PrimitiveType=91;
    public static final int QuestionMark=92;
    public static final int Real=93;
    public static final int Reference=94;
    public static final int RequireOperator=95;
    public static final int Return=96;
    public static final int SemiColon=97;
    public static final int ShiftOperator=98;
    public static final int SingleQuotedString=99;
    public static final int SinglelineComment=100;
    public static final int Static=101;
    public static final int SuppressWarnings=102;
    public static final int Switch=103;
    public static final int Tilde=104;
    public static final int UnixComment=105;
    public static final int UnquotedString=106;
    public static final int Var=107;
    public static final int While=108;
    public static final int WhiteSpace=109;
    public static final int Xor=110;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public PhpParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public PhpParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
        this.state.ruleMemo = new HashMap[170+1];
         

    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return PhpParser.tokenNames; }
    public String getGrammarFileName() { return "Php.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // Php.g:131:1: prog : ( statement )* ;
    public final PhpParser.prog_return prog() throws RecognitionException {
        PhpParser.prog_return retval = new PhpParser.prog_return();
        retval.start = input.LT(1);

        int prog_StartIndex = input.index();

        CommonTree root_0 = null;

        PhpParser.statement_return statement1 =null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }

            // Php.g:131:6: ( ( statement )* )
            // Php.g:131:8: ( statement )*
            {
            root_0 = (CommonTree)adaptor.nil();


            // Php.g:131:8: ( statement )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==Abstract||LA1_0==Ampersand||LA1_0==Array||LA1_0==Bang||(LA1_0 >= BodyString && LA1_0 <= Break)||LA1_0==Class||LA1_0==Clone||LA1_0==Continue||(LA1_0 >= Do && LA1_0 <= Dollar)||(LA1_0 >= DoubleQuotedString && LA1_0 <= Echo)||LA1_0==For||LA1_0==Foreach||(LA1_0 >= Function && LA1_0 <= HereDoc)||LA1_0==If||LA1_0==IncrementOperator||(LA1_0 >= Integer && LA1_0 <= Interface)||LA1_0==Minus||LA1_0==New||(LA1_0 >= OpenBrace && LA1_0 <= OpenCurlyBrace)||LA1_0==Real||(LA1_0 >= RequireOperator && LA1_0 <= Return)||LA1_0==SingleQuotedString||(LA1_0 >= Static && LA1_0 <= Tilde)||LA1_0==UnquotedString||LA1_0==While) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // Php.g:131:8: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_prog877);
            	    statement1=statement();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, statement1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 1, prog_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class statement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "statement"
    // Php.g:133:1: statement : ( ( simpleStatement )? BodyString | '{' statement '}' -> statement | bracketedBlock | classDefinition | interfaceDefinition | complexStatement | simpleStatement ';' !);
    public final PhpParser.statement_return statement() throws RecognitionException {
        PhpParser.statement_return retval = new PhpParser.statement_return();
        retval.start = input.LT(1);

        int statement_StartIndex = input.index();

        CommonTree root_0 = null;

        Token BodyString3=null;
        Token char_literal4=null;
        Token char_literal6=null;
        Token char_literal12=null;
        PhpParser.simpleStatement_return simpleStatement2 =null;

        PhpParser.statement_return statement5 =null;

        PhpParser.bracketedBlock_return bracketedBlock7 =null;

        PhpParser.classDefinition_return classDefinition8 =null;

        PhpParser.interfaceDefinition_return interfaceDefinition9 =null;

        PhpParser.complexStatement_return complexStatement10 =null;

        PhpParser.simpleStatement_return simpleStatement11 =null;


        CommonTree BodyString3_tree=null;
        CommonTree char_literal4_tree=null;
        CommonTree char_literal6_tree=null;
        CommonTree char_literal12_tree=null;
        RewriteRuleTokenStream stream_CloseCurlyBrace=new RewriteRuleTokenStream(adaptor,"token CloseCurlyBrace");
        RewriteRuleTokenStream stream_OpenCurlyBrace=new RewriteRuleTokenStream(adaptor,"token OpenCurlyBrace");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }

            // Php.g:134:5: ( ( simpleStatement )? BodyString | '{' statement '}' -> statement | bracketedBlock | classDefinition | interfaceDefinition | complexStatement | simpleStatement ';' !)
            int alt3=7;
            alt3 = dfa3.predict(input);
            switch (alt3) {
                case 1 :
                    // Php.g:134:7: ( simpleStatement )? BodyString
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    // Php.g:134:7: ( simpleStatement )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==Ampersand||LA2_0==Array||LA2_0==Bang||(LA2_0 >= Boolean && LA2_0 <= Break)||LA2_0==Clone||LA2_0==Continue||LA2_0==Dollar||(LA2_0 >= DoubleQuotedString && LA2_0 <= Echo)||(LA2_0 >= Global && LA2_0 <= HereDoc)||LA2_0==IncrementOperator||LA2_0==Integer||LA2_0==Minus||LA2_0==New||LA2_0==OpenBrace||LA2_0==Real||(LA2_0 >= RequireOperator && LA2_0 <= Return)||LA2_0==SingleQuotedString||(LA2_0 >= Static && LA2_0 <= SuppressWarnings)||LA2_0==Tilde||LA2_0==UnquotedString) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // Php.g:134:7: simpleStatement
                            {
                            pushFollow(FOLLOW_simpleStatement_in_statement890);
                            simpleStatement2=simpleStatement();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) adaptor.addChild(root_0, simpleStatement2.getTree());

                            }
                            break;

                    }


                    BodyString3=(Token)match(input,BodyString,FOLLOW_BodyString_in_statement893); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    BodyString3_tree = 
                    (CommonTree)adaptor.create(BodyString3)
                    ;
                    adaptor.addChild(root_0, BodyString3_tree);
                    }

                    }
                    break;
                case 2 :
                    // Php.g:135:7: '{' statement '}'
                    {
                    char_literal4=(Token)match(input,OpenCurlyBrace,FOLLOW_OpenCurlyBrace_in_statement901); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_OpenCurlyBrace.add(char_literal4);


                    pushFollow(FOLLOW_statement_in_statement903);
                    statement5=statement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_statement.add(statement5.getTree());

                    char_literal6=(Token)match(input,CloseCurlyBrace,FOLLOW_CloseCurlyBrace_in_statement905); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_CloseCurlyBrace.add(char_literal6);


                    // AST REWRITE
                    // elements: statement
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 135:25: -> statement
                    {
                        adaptor.addChild(root_0, stream_statement.nextTree());

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;
                case 3 :
                    // Php.g:136:7: bracketedBlock
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_bracketedBlock_in_statement917);
                    bracketedBlock7=bracketedBlock();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, bracketedBlock7.getTree());

                    }
                    break;
                case 4 :
                    // Php.g:138:7: classDefinition
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_classDefinition_in_statement930);
                    classDefinition8=classDefinition();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, classDefinition8.getTree());

                    }
                    break;
                case 5 :
                    // Php.g:139:7: interfaceDefinition
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_interfaceDefinition_in_statement938);
                    interfaceDefinition9=interfaceDefinition();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, interfaceDefinition9.getTree());

                    }
                    break;
                case 6 :
                    // Php.g:140:7: complexStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_complexStatement_in_statement946);
                    complexStatement10=complexStatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, complexStatement10.getTree());

                    }
                    break;
                case 7 :
                    // Php.g:141:7: simpleStatement ';' !
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_simpleStatement_in_statement954);
                    simpleStatement11=simpleStatement();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, simpleStatement11.getTree());

                    char_literal12=(Token)match(input,SemiColon,FOLLOW_SemiColon_in_statement956); if (state.failed) return retval;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 2, statement_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "statement"


    public static class bracketedBlock_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "bracketedBlock"
    // Php.g:144:1: bracketedBlock : '{' (stmts= statement )* '}' -> ^( Block $stmts) ;
    public final PhpParser.bracketedBlock_return bracketedBlock() throws RecognitionException {
        PhpParser.bracketedBlock_return retval = new PhpParser.bracketedBlock_return();
        retval.start = input.LT(1);
